--- a/CuaHangTapHoa/CuaHangTapHoa.WinForm/CuaHangTapHoa.WinForm.csproj
+++ b/CuaHangTapHoa/CuaHangTapHoa.WinForm/CuaHangTapHoa.WinForm.csproj
@@ -52,10 +52,26 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="HangHoaBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="HangHoaBox.Designer.cs">
+      <DependentUpon>HangHoaBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="uHangHoaItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="uHangHoaItem.Designer.cs">
+      <DependentUpon>uHangHoaItem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Utils\DirectoryUtils.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HangHoaBox.resx">
+      <DependentUpon>HangHoaBox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -66,6 +82,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="uHangHoaItem.resx">
+      <DependentUpon>uHangHoaItem.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
