--- a/CuaHangTapHoa/CuaHangTapHoa.WinForm/CuaHangTapHoa.WinForm.csproj
+++ b/CuaHangTapHoa/CuaHangTapHoa.WinForm/CuaHangTapHoa.WinForm.csproj
@@ -48,7 +48,9 @@
   <ItemGroup>
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\HangHoaDAO.cs" />
+    <Compile Include="DAO\LoaiHangHoaDAO.cs" />
     <Compile Include="DTO\HangHoaRead.cs" />
+    <Compile Include="DTO\LoaiHangHoa.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
