--- a/CuaHangTapHoa/CuaHangTapHoa.WinForm/CuaHangTapHoa.WinForm.csproj
+++ b/CuaHangTapHoa/CuaHangTapHoa.WinForm/CuaHangTapHoa.WinForm.csproj
@@ -47,8 +47,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DAO\DataProvider.cs" />
+    <Compile Include="DAO\DonViTinhDAO.cs" />
     <Compile Include="DAO\HangHoaDAO.cs" />
     <Compile Include="DAO\LoaiHangHoaDAO.cs" />
+    <Compile Include="DTO\DonViTinh.cs" />
     <Compile Include="DTO\HangHoaRead.cs" />
     <Compile Include="DTO\LoaiHangHoa.cs" />
     <Compile Include="Form1.cs">
